--- a/Style.css
+++ b/Style.css
@@ -14,3 +14,15 @@ body
 {
     font-size: 35px;
 }
+section
+{
+    display: flex;
+}
+.secpara
+{
+    width: 50%;
+    padding-left:1%;
+}
+.secpara img{
+    width: 100%;
+}
