--- a/Style.css
+++ b/Style.css
@@ -3,39 +3,39 @@ body
     font-family: 'Roboto Slab', serif;
     margin: 0;
 }
-#welcome
-{
-    color: aqua;
-}
-#website
-{
-    color: dodgerblue;
-}
-.weltext
-{
-    font-size: 35px;
-}
 .sec1
 {
     display: flex;
+    padding-left: 100px;
     background-image: url(Image/top-banner.png);
     background-repeat: no-repeat;
 }
-.secpara
+.sec1para h1
+{
+    font-size: 50px;
+}
+.sec1 img
+{
+    width: 80%;
+    margin-left: 50px;
+}
+.sec1para
 {
     width: 50%;
-    padding-left:1%;
 }
-.sec1 img{
-    width: 75%;
+.sec1para p
+{
+    margin-bottom: 50px;
 }
-#hire
+.color
+{
+    color: orange;
+}
+.hire
 {
     text-decoration: none;
-    padding: 15px 42px;
-    border-radius: 30px;
-    color: white;
-    font-weight: 650;
     background-image: linear-gradient(orange, tomato);
-
+    padding: 12px 35px;
+    border-radius: 5%;
+    
 }
