--- a/Style.css
+++ b/Style.css
@@ -7,6 +7,7 @@ body
 {
     display: flex;
     padding-left: 100px;
+    margin-bottom: 150px;
     background-image: url(Image/top-banner.png);
     background-repeat: no-repeat;
 }
@@ -38,4 +39,20 @@ body
     padding: 12px 35px;
     border-radius: 5%;
     
+}
+.sec2
+{
+    display: flex;
+}
+.sec2para
+{
+    width: 50%;
+}
+.sec2 img
+{
+    width: 75%;
+}
+.sec2 h1
+{
+    font-size: 50px;
 }
